...
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/colorWhite"
                android:hint="First Name"
                android:inputType="text"
...
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark"/>


            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/colorWhite"
                android:hint="Last Name"
                android:inputType="text"
...
                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/age"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/colorWhite"
                android:hint="Age"
...
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark"/>


            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorWhite"
                android:hint="Your Current Weight"
...
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorWhite"
                android:hint="Your Height in cm"
...
                android:paddingRight="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />
            </RadioGroup>


            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Begin"
                android:background="@drawable/rounded"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
