...
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/BFI"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/bfi" />

                    <TextView
                        android:layout_width="wrap_content"
...
